that will check the next value available to the database sequences
that generate primary keys and update them when necessary.  This
can happen when another database load adds data to chado but does
not update the sequence.
* Adding the ability to specify that gmod_bulk_load_gff3.pl use the
system tmp directory rather than using the current working directory
for writing the temporary load files.



Below this line are changes up until a few years ago and are included
for historical purposes.
---------------------------------------------------------------------------


VERSION 0.01
============

No change log

VERSION 0.02
============

No change log

VERSION 0.03
============

all modules
	ditched timeentered and timelastmod columns in every table
		We've decided that auditing is implementation specific.
		We're presently working on the FB implementation, and
		  will make that available soon
	changed all dbxrefstr foreign keys to dbxref_id
	added indexes for every foreign key column in every table
	all linking tables:
		Added primary keys to all linking tables, for consistency's 
		sake, since we already had primary keys in some linking tables.
		I hope nobody objects...?

general module:

	dbxref
		removed dbxref.dbxrefstr
		removed unique key (dbxrefstr)

cv module:

	New table:
		added table cv to hold cv names
	cvterm
		changed accordingly
	cvpath
		changed accordingly	

	cvterm_synonym
		changed the name of table cvterm_synonym to cvtermsynonym, 
		since this isn't a linking table.


organism module:

	organism_dbxref
		added unique key (organism_id,dbxref_id)
	organism
		made genus, species, taxgroup fields not null

pub module

	pub
		added miniref
		added unique key (miniref)
	pub_author
		added unique key (author_id,pub_id)
	author
		added unique key (surname,givenname,suffix)

	
sequence module

	Deleted table
		feature_organism
	feature
		added foreign key organism_id (not null)
		added uniquename column (not null)